--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.1.6",
     "firebase": "^9.16.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.kebabcase": "^4.1.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,5 +25,8 @@
     "react-hot-toast": "^2.4.0",
     "react-markdown": "^8.0.5",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/lodash.kebabcase": "^4.1.7"
   }
 }
